<resources>
    <string name="app_name">WildSocksCommunity</string>
    <string name="button_start_id">Connexion</string>
    <string name="button_start_new">Inscription</string>
    <string name="confirm">Ok</string>
    <string name="cancel">Annuler</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="signUp">Pas encore de compte? Inscris-toi ici!</string>
    <string name="create">Créer mon profil</string>
    <string name="newAccount"> Complétez tes informations pour créer ton compte</string>
    <string name="pseudo">Pseudo</string>
    <string name="Email">Email</string>
    <string name="pwd">Mot de Passe</string>
    <string name="footSize">Ta Pointure?</string>
    <string name="moto">Quelle est ta devise?</string>
    <string name="picture">Ajoute ta photo de profil!</string>
    <string name="signIn">Bienvenue! Connecte-toi:</string>
    <string name="toastDefaultAccountInformation">Merci de compléter le Pseudo, l\'Email et le mot de passe</string>
    <string name="toastDefaultPwd">Merci d\'indiquer un mot de passe</string>
    <string name="toastDefaultEmail">Merci de compléter ton Email</string>
    <string name="toastDefaultSignIn">Merci d\'indiquer ton Email et Mot de passe</string>
    <string name="signed_in_fmt">Bienvenue</string>
    <string name="signInSuccess">Bienvenue</string>
    <string name="signInFailed">Bienvenue</string>
    <string name="signInPending">Identification en cours...</string>
    <string name="registrationPending">Enregistrement en cours</string>
    <string name="alreadyRegistered">Déjà inscrit? Connectes-toi ici!</string>
    <string name="registrationFailed">Problème lors de la création de compte!</string>
    <string name="gallery">Album</string>
    <string name="camera">Camera</string>
    <string name="sockName">Légende?</string>
    <string name="newSocks">Ajoute une nouvelle photo !</string>
    <string name="createSocks">Enregistrer</string>
    <string name="sockLegend">Legend</string>
    <string name="ratingUpdate">Noter</string>
    <string name="noRate">Tu ne peux pas noter 0!</string>
    <string name="modify_photo">Modifier la photo de profil</string>
    <string name="btn_modify">MODIFIER</string>
    <string name="delete">Supprimer ton compte</string>
    <string name="modify_profil">Modifier le profil</string>
    <string name="modify_pwd">Mot de passe oublié ?</string>
    <string name="whyModify">Vous ne vous rappelez plus de votre mot de passe ? Indiquez- nous votre email, pour générer un nouveau mot de passe.</string>
    <string name="send">Envoyer</string>
    <string name="msg_send">Le message a été envoyé !</string>
    <string name="success">Succès !</string>
    <string name="error">Erreur !</string>
    <string name="send_fail">Es-tu sûr d\'avoir un compte à cette adresse email ?</string>
    <string name="email_empty">Tu dois renseigner une adresse email !</string>
    <string name="caption">Légende</string>
    <string name="Finish">Terminé</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="longClick">Supprimer?</string>
    <string name="deleteSocks">Es-tu certain de vouloir supprimer?</string>
    <string name="like_or_not">Sortir de tes kicks?</string>
    <string name="still_like">Annuler</string>
    <string name="like_no_more">Retirer mon kick!</string>
    <string name="longClickkick">retirer kick</string>
    <string name="modify_password">Modifier mon mot de passe</string>
    <string name="download_fail">Le téléchargement a échoué !</string>
    <string name="textViewLeg">Légende :</string>
    <string name="pick_category"><b><i>Choisi la catégorie de ta photo :</i></b></string>
    <string name="category_1">Chaussettes</string>
    <string name="category_2">Chaussons</string>
    <string name="ranking_all">Classement général</string>
    <string name="category1">Chaussons</string>
    <string name="category2">Chaussette</string>
    <string name="category3">Tongs</string>
    <string name="add_comment">Ajouter un commentaire</string>
    <string name="button_comment">Poster</string>
    <string name="noCommentToast">Tu n\'as pas entré de commentaire</string>
    <string name="deleteComment">Es-tu certain de vouloir supprimer ce commentaire?</string>
    <string name="text_comments">Yeah ! Peux-tu en dire un peu plus !</string>
    <string name="hint_commentaire">Ton commentaire ...</string>
    <string name="text_thanks">Woah! Merci pour ta note !</string>
    <string name="text_KickUp">Kick Up cette photo !</string>
    <string name="noCommentDeletion">Tu n\'as pas le droit de supprimer ce commentaire!</string>
    <string name="pointure">Pointure</string>
    <string name="reportAlertDialogTitle">Signaler une photo</string>
    <string name="reportAlertDialogQuestion">Cette publication est inappropriée ?</string>
    <string name="alertDialogueCancel">Non</string>
    <string name="alertDialogConfirm">Oui</string>
    <string name="reportAlertDialogBack">ok</string>
    <string name="reportAlertDialogEnd">Merci de l\'info !</string>
    <string name="removeAlertDialogTitle">Tu changes de Chaussettes ?</string>
    <string name="removeAlertDialogQuestion">Es tu sûr de vouloir supprimer ta photo ?</string>
    <string name="removeAlertDialogGo">TOP</string>
    <string name="moderatorAlertTitle">Moderator!!!</string>
    <string name="moderatorAlertNoRemove">Ok, On garde</string>
    <string name="moderatorAlertRemove">Chérie ça va trancher</string>
    <string name="acceptConditions">
        <u>J\'ai lu et j\'accepte les conditions générales d\'utilisation.</u>
    </string>
    <string name="acceptConditionsToast">Tu dois accepter les conditions générales d\'utilisation !</string>
    <string name="conditions_title">Terms of Use</string>
    <string name="conditions_par1">The Service is owned or controlled by the Wild Code School ("WCS"). It is the outcome of a development project of three WCS students based in Toulouse </string>
    <string name="conditions_par2">Antoine Biamouret
        Marion Fontaine
        Robin Goudy
    </string>
    <string name="conditions_par3">
        If you have any questions about this Privacy Policy or the Service, please contact the WCS(https://wildcodeschool.fr/).
    </string>
    <string name="conditions_par4">
    Community Guidelines</string>
    <string name="conditions_par5">
        Post only your own photos and always follow the law.
</string>
    <string name="conditions_par6">
        Respect everyone on Wild Socks Community, don’t spam people or post nudity.
</string>
    <string name="conditions_par7">
Share only photos that you’ve taken or have the right to share.
</string>
    <string name="conditions_par8">
Post photos and videos that are appropriate for a diverse     audience.
</string>
    <string name="conditions_par9">
Follow the law.
</string>
    <string name="conditions_par10">
Respect other members of the Wild Socks Community.
</string>
    <string name="conditions_par11">
Maintain our supportive environment by not glorifying self-injury.
</string>
    <string name="conditions_par12">
Privacy Policy
1. INFORMATION WE COLLECT
Your username, password and e-mail address when you create your account.
Profile information that you provide for your user profile (e.g., avatar picture and foot size).
User Content (e.g., photos, comments) that you post to the Service.
Communications between you and Wild Socks Community. For example, we may send you Service-related emails (e.g., account verification, changes/updates to features of the Service, technical and security notices).
2. HOW WE USE YOUR INFORMATION
In addition to some of the specific uses of information we describe in this Privacy Policy, we may use information that we receive to:
remember information so you will not have to re-enter it during your visit or the next time you visit the Service;
3. SHARING OF YOUR INFORMATION
We will not rent or sell your information to third parties.
</string>
    <string name="conditions_par13">

Terms of Use

You must be at least 16 years old to use the Service
You may not post violent, nude, partially nude, discriminatory, unlawful, infringing, hateful, pornographic or sexually suggestive photos or other content via the Service.
You are responsible for any     activity that occurs through your account
You agree that you will not solicit, collect or use the login credentials of other Instagram users.
You are responsible for keeping your password secret and secure.
You must not defame, stalk,     bully, abuse, harass, threaten, impersonate or intimidate people or entities and you must not post private or confidential information via the Service.
You may not use the Service for any illegal or unauthorized purpose. You agree to comply with all laws, rules and regulations applicable to your use of the Service and your Content, including but not limited to, copyright laws.
You are solely responsible for your conduct and any content or materials (collectively, "Content") that you submit, post or display on or via the Service.
You must not change, modify, adapt or alter the Service or change, modify or alter another website so as to falsely imply that it is associated with the Service or the Wild Code School.
You must not access Wild Socks Community private API by means other than those permitted by Wcs.
You must not create or submit unwanted email, comments, likes or other forms of commercial or harassing communications (a/k/a "spam") to any Wild Socks Community users.
You must not interfere or disrupt the Service or servers or networks connected to the Service, including by transmitting any worms, viruses, spyware,         malware or any other code of a destructive or disruptive nature.
You must comply with Wild Socks Community Guidelines, available below (see Community Guidelines).
Violation of these Terms of Use may, in WCS’ sole discretion, result in termination of your Wild Socks Community account or suppression of any Content you might have posted on Wild Socks Community.
You understand and agree that WCS cannot and will not be responsible for the Content posted on the Service and you use the Service at your own risk. If you violate the letter or spirit of these Terms of Use, or otherwise create risk or possible legal exposure for WCS, we can stop providing the Service to you.
</string>
    <string name="conditions_par14">General Conditions
    </string>
    <string name="conditions_par15">We reserve the right to modify or terminate the Service or your access to the Service for any reason, without notice, at any time, and without liability to you.
    You can deactivate your Wild Socks Community account by logging into the Service and requesting the destruction of your account. Your photos, comments, kicks and all other data will no longer be accessible through your account (e.g., users will not be able to navigate to your socks). Those materials and data may persist and appear within the Service (e.g., if your Content has been kicked by     others : they will keep it in their personnal « MyKicks » view).
    We reserve the right, in our sole discretion, to change these Terms of Use ("Updated Terms") from time to time. You agree that we may notify you of the Updated Terms by posting them on the Service, and that    your use of the Service after the effective date of the Updated Terms constitutes your agreement to the Updated Terms.
    We reserve the right to refuse access to the Service to anyone for any reason at any time.
    We may, but have no obligation to, remove, edit, block, and/or monitor Content or accounts containing Content that we determine in our sole discretion         violates these Terms of Use.
    Rights
    7</string>
</resources>