<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:measureAllChildren="true"
    tools:context="fr.wcs.wildcommunitysocks.AddPhotos"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/newSocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/newSocks"
        android:layout_gravity="center_horizontal"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"/>

<!--
    <ImageView
        android:id="@+id/imageViewFrame"
        android:layout_marginTop="120dp"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/frame_shape2"/>
        -->

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:src="@drawable/photo_camera"
        android:layout_marginBottom="130dp"
        android:background="@android:color/transparent"
        android:layout_marginLeft="50dp"
        android:layout_gravity="bottom"/>

    <ImageButton
        android:id="@+id/rotateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="150dp"
        android:layout_marginBottom="130dp"
        android:background="@android:color/transparent"
        android:src="@mipmap/rotating_circular_arrow64"
        android:text="" />

    <TextView
        android:id="@+id/sockName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/sockName"
        android:layout_marginBottom="85dp"
        android:layout_marginLeft="40dp"
        android:layout_gravity="bottom"/>

    <EditText
        android:id="@+id/editsockName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint=""
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="30dp"
        android:layout_gravity="bottom"/>

    <ImageButton
        android:id="@+id/buttonUpload"
        android:layout_width="50dp"
        android:layout_height="54dp"
        android:src="@drawable/rocket"
        android:text="@string/createSocks"
        android:layout_marginLeft="260dp"
        android:layout_marginBottom="60dp"
        android:background="@android:color/transparent"
        android:textColor="#FFFFFF"
        android:layout_gravity="bottom"/>

    <ImageButton
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="130dp"
        android:layout_marginLeft="250dp"
        android:background="@android:color/transparent"
        android:src="@drawable/album"
        android:text="@string/gallery" />


</FrameLayout>