<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.wildcommunitysocks.ModifyProfil">

    <ImageView
        android:id="@+id/imageViewProfil"
        android:layout_width="84dp"
        android:layout_height="71dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        tools:layout_editor_absoluteX="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="44dp" />

    <TextView
        android:id="@+id/textViewModifyPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modify_photo"
        tools:layout_editor_absoluteX="163dp"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfil"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/editTextChangePseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewModifyPhoto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/editTextChangeEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextChangePseudo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/editTextChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextChangeEmail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/buttonModify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_modify"
        tools:layout_editor_absoluteX="148dp"
        android:layout_marginTop="73dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextChangePassword"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/textViewDeleteProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        tools:layout_editor_absoluteX="163dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonModify"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextChangePassword"
        app:layout_constraintVertical_bias="0.512"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
